# Datum

./: .env  README.md  docker-compose.yml  init.sql  login.html  main.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  Login.css  Login.tsx  Notification.tsx  login-main.tsx
src-tauri/: :w  Cargo.toml  tauri.conf.json
src-tauri/src/: db_conn.rs  lib.rs  main.rs
